# Chess-Engine-

./: .gitignore  CMakeLists.txt  README.md
src/: board.cpp  board.h  engine.cpp  engine.h  gamestate.cpp  gamestate.h  gui.cpp  gui.h  main.cpp  movegen.cpp  movegen.h
